<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/safety_band_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/safetyBand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/madimione_regular"
        android:letterSpacing="0.02"
        android:text="@string/safety_band"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:src="@drawable/fitness_tracker_48px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/swimFrame"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/swim_frame_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/safetyBand">

        <TextView
            android:id="@+id/swimmingStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:fontFamily="@font/madimione_regular"
            android:letterSpacing="0.07"
            android:text="@string/swim"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/safetyBand" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/swimmingImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:src="@drawable/pool_24px"
            android:visibility="invisible" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/tumbleFrame"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/tumble_frame_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swimFrame">

        <TextView
            android:id="@+id/fallingStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:fontFamily="@font/madimione_regular"
            android:letterSpacing="0.04"
            android:text="@string/tumble"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timeRadioGroup" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fallingImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:src="@drawable/falling_24px"
            android:visibility="invisible" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/timer"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/timer_background"
        app:layout_constraintStart_toEndOf="@id/swimFrame"
        app:layout_constraintTop_toBottomOf="@id/safetyBand">

        <Chronometer
            android:id="@+id/swimChronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/madimione_regular"
            android:textColor="@color/white"
            android:textSize="44sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resetButton"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/reset_background"
            android:fontFamily="@font/madimione_regular"
            android:letterSpacing="0.1"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </FrameLayout>

    <TextView
        android:id="@+id/swimMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/madimione_regular"
        android:letterSpacing="0.03"
        android:text="@string/swim_mode"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tumbleFrame"
        app:layout_constraintTop_toBottomOf="@id/timer" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swimModeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:checked="false"
        android:scaleX="1.2"
        android:scaleY="1.2"
        app:layout_constraintStart_toEndOf="@id/swimMode"
        app:layout_constraintTop_toBottomOf="@id/timer"
        app:thumbTint="@color/white" />


    <RadioGroup
        android:id="@+id/timeRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swimMode">

        <RadioButton
            android:id="@+id/time10m"
            android:layout_width="65dp"
            android:layout_height="45dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/madimione_regular"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/time_10min"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/time20m"
            android:layout_width="65dp"
            android:layout_height="45dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/madimione_regular"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/time_20min"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/time30m"
            android:layout_width="65dp"
            android:layout_height="45dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/madimione_regular"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/time_30min"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/timeRadioGroupTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeRadioGroup">

        <RadioButton
            android:id="@+id/time40m"
            android:layout_width="65dp"
            android:layout_height="45dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/madimione_regular"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/time_40min"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/time50m"
            android:layout_width="65dp"
            android:layout_height="45dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/madimione_regular"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/time_50min"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/time1h"
            android:layout_width="65dp"
            android:layout_height="45dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:letterSpacing="0.03"
            android:fontFamily="@font/madimione_regular"
            android:background="@drawable/selector_radio_button"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/time_1h"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

    <ImageView
        android:id="@+id/callWatch"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/watch_vibration_48px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tumbleFrame" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonWrite"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="65dp"
        android:background="@drawable/call_background"
        android:fontFamily="@font/madimione_regular"
        android:letterSpacing="0.07"
        android:onClick="onTapWrite"
        android:stateListAnimator="@null"
        android:text="@string/call"
        android:textSize="28sp"
        android:textStyle="bold"
        android:translationZ="10dp"
        app:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tumbleFrame" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:checked="false"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/callWatch"
        app:layout_constraintEnd_toEndOf="parent"
        app:thumbTint="@color/white" />

    <!--    <Button
            android:id="@+id/button_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:onClick="onTapRead"
            android:text="@string/button_read"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewReadValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewReadValue" />-->

    <!--    <TextView
            android:id="@+id/textViewReadValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/button_read"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewReadHint" />-->


    <TextView
        android:id="@+id/textViewIndicateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tumbleFrame" />

    <!--    <TextView
            android:id="@+id/textViewReadHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_static_read_hint"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/textViewReadValue"
            app:layout_constraintTop_toBottomOf="@+id/textViewLifecycleState" />-->

    <TextView
        android:id="@+id/textViewIndicateHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/madimione_regular"
        android:text="@string/text_static_indicate_hint"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/textViewIndicateValue"
        app:layout_constraintTop_toBottomOf="@+id/textViewIndicateValue" />

    <TextView
        android:id="@+id/textViewWaterSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/madimione_regular"
        android:text="Water Sensor: N/A"
        android:textColor="@color/white"
        android:visibility="invisible"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewIndicateHint" />

    <TextView
        android:id="@+id/textViewAccelSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/madimione_regular"
        android:text="Accelerometer: N/A"
        android:textColor="@color/white"
        android:visibility="invisible"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewWaterSensor" />

    <!--    <ScrollView
            android:id="@+id/scrollViewLog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewIndicateValue"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textViewLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_default_logs_value" />

        </ScrollView>-->

    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="67dp"
        android:src="@drawable/bluetooth_24px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonWrite" />

    <TextView
        android:id="@+id/textViewAutoconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/madimione_regular"
        android:text="@string/text_static_autoconnect"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonWrite" />


    <TextView
        android:id="@+id/textViewLifecycleState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/madimione_regular"
        android:text="@string/text_state_disconnected"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAutoconnect" />


</androidx.constraintlayout.widget.ConstraintLayout>